db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      name: postgresql
      labels:
        app: postgresql
        tier: database
    spec:
      containers:
        - name: postgresql
          image: postgres:17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata


      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgre-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
    tier: database
spec:
  selector:
    app: postgresql
    tier: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
